pkginclude_HEADERS =    libmikey/exception.h \
			libmikey/keyagreement.h \
			libmikey/KeyAgreementPKE.h \
			libmikey/keyagreement_dh.h \
			libmikey/keyagreement_psk.h \
			libmikey/keyvalidity.h \
			libmikey/MikeyDefs.h \
			libmikey/MikeyException.h \
			libmikey/MikeyMessage.h \
			libmikey/MikeyPayloadCERT.h \
			libmikey/MikeyPayloadCHASH.h \
			libmikey/MikeyPayloadDH.h \
			libmikey/MikeyPayloadERR.h \
			libmikey/MikeyPayloadGeneralExtension.h \
			libmikey/MikeyPayload.h \
			libmikey/MikeyPayloadHDR.h \
			libmikey/MikeyPayloadID.h \
			libmikey/MikeyPayloadKEMAC.h \
			libmikey/MikeyPayloadKeyData.h \
			libmikey/MikeyPayloadPKE.h \
			libmikey/MikeyPayloadRAND.h \
			libmikey/MikeyPayloadSIGN.h \
			libmikey/MikeyPayloadSP.h \
			libmikey/MikeyPayloadT.h \
			libmikey/MikeyPayloadV.h \
			libmikey/MikeyCsIdMap.h \
			libmikey/oakley_groups.h \
			libmikey/libmikey_config.h

noinst_HEADERS = 	config.h

MAINTAINERCLEANFILES =	$(srcdir)/Makefile.in \
			$(srcdir)/compilation_config.h.in \
			$(srcdir)/compilation_config.h.in~
